--- a/package.json
+++ b/package.json
@@ -1,24 +1,68 @@
 {
-  "name": "web-pair",
-  "version": "0.0.1",
-  "description": "A multi functional whatsapp bot Web paircode.",
-  "main": "index.js",
-  "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name vajira-md",
-    "stop": "pm2 stop vajira-md",
-    "restart": "pm2 restart vajira-md"
+  "name": "gifted-md",
+  "version": "5.0.0",
+  "description": "Gifted-Md, a Multi Device Whatsapp Bot to Enhance Whatsapp Communication Experience",
+  "main": "./index.js",
+  "type": "commonjs",
+  "engines": {
+    "npm": "10.x",
+    "node": "22.x"
   },
+  "scripts": {
+    "start": "pm2 start index.js --name giftedmd",
+    "stop": "pm2 stop giftedmd",
+    "restart": "pm2 restart giftedmd"
+  },
+  "keywords": [
+    "gifted-md",
+    "whatsapp-bot",
+    "giftedtech"
+  ],
+  "author": "GiftedTech",
+  "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "7.0.0-rc.9",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "qrcode": "^1.5.3",
-    "awesome-phonenumber": "^2.64.0",
-    "pino": "^8.1.0",
-    "phone": "3.1.30",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.1",
-    "megajs": "1.1.7",
-    "pm2": "^5.4.0",
-    "async-mutex": "0.4.1"
-  }
+    "@vitalets/google-translate-api": "^9.2.0",
+    "gifted-baileys": "2.0.0",
+    "gifted-btns": "^1.0.0",
+    "axios": "^1.2.5",
+    "acrcloud": "*",
+    "adm-zip": "*",
+    "google-tts-api": "*",
+    "body-parser": "latest",
+    "buffer": "*",
+    "dotenv": "*",
+    "express": "^4.19.2",
+    "file-type": "17.1.6",
+    "ffmpeg-static": "*",
+    "fluent-ffmpeg": "*",
+    "@hapi/boom": "*",
+    "@ffmpeg-installer/ffmpeg": "*",
+    "stream": "*",
+    "form-data": "^4.0.1",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.0",
+    "jimp": "0.16.1",
+    "sharp": "^0.32.6",
+    "gifted-dls": "*",
+    "mime-types": "^2.1.35",
+    "moment-timezone": "^0.5.45",
+    "node-fetch": "^3.3.2",
+    "path": "latest",
+    "pg": "*",
+    "pino": "^7.0.5",
+    "pm2": "latest",
+    "qrcode-terminal": "^0.12.0",
+    "sequelize": "*",
+    "sqlite3": "*",
+    "util": "*",
+    "wa-sticker-formatter": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mauricegift/gifted-md.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mauricegift/gifted-md/issues"
+  },
+  "homepage": "https://github.com/mauricegift/gifted-md#readme"
 }
